[gd_scene load_steps=16 format=2]

[ext_resource path="res://Game/Grid/Grid.gd" type="Script" id=1]
[ext_resource path="res://Game/Grid/Grid.png" type="Texture" id=2]
[ext_resource path="res://Game/Elements/Element-01.png" type="Texture" id=3]
[ext_resource path="res://Game/Elements/Particle-01.png" type="Texture" id=4]
[ext_resource path="res://Game/Elements/Element-02.png" type="Texture" id=5]
[ext_resource path="res://Game/Elements/Particle-02.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 520, 230 )

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 500, 200, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 2.8026e-044
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 500, 100, 1 )
flag_disable_z = true
gravity = Vector3( 0, -100, 0 )
angular_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
scale = 0.3
scale_random = 0.15
scale_curve = SubResource( 3 )
color_ramp = SubResource( 9 )

[node name="Grid" type="Area2D" groups=[
"Special",
]]
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -254 )
shape = SubResource( 1 )

[node name="Grid" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -255 )

[node name="Type1" type="Node2D" parent="."]
modulate = Color( 1, 0, 0, 1 )

[node name="Element" type="Particles2D" parent="Type1"]
position = Vector2( 0, -275 )
amount = 5
visibility_rect = Rect2( -495.026, -183.886, 970.718, 413.817 )
process_material = SubResource( 7 )
texture = ExtResource( 3 )

[node name="Smoke" type="Particles2D" parent="Type1"]
modulate = Color( 1, 1, 1, 0.72549 )
position = Vector2( -1.36041, -131 )
amount = 15
lifetime = 2.0
visibility_rect = Rect2( -422.484, -272.484, 871.656, 352.736 )
process_material = SubResource( 4 )
texture = ExtResource( 4 )

[node name="Type2" type="Node2D" parent="."]
modulate = Color( 0.2, 0.8, 0.2, 1 )

[node name="Element" type="Particles2D" parent="Type2"]
position = Vector2( 0, -275 )
amount = 5
visibility_rect = Rect2( -495.026, -183.886, 970.718, 413.817 )
process_material = SubResource( 7 )
texture = ExtResource( 5 )

[node name="Smoke" type="Particles2D" parent="Type2"]
modulate = Color( 1, 1, 1, 0.72549 )
position = Vector2( -1.36041, -131 )
amount = 15
lifetime = 2.0
visibility_rect = Rect2( -422.484, -272.484, 871.656, 352.736 )
process_material = SubResource( 4 )
texture = ExtResource( 6 )
[connection signal="body_entered" from="." to="." method="_on_Grid_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Grid_body_exited"]
